dev/ingress/fake21-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake21-ingress
  namespace: fake21-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake21.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake21-service
                port:
                  number: 20021
